// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ball > when checked > should have aria-checked=true 1`] = `
<button
  aria-checked="true"
  class="s-H7--1TZSAuX0"
  role="switch"
>
  <div
    class="s-H7--1TZSAuX0"
  />
</button>
`;

exports[`Ball > when not checked > should have aria-checked=false 1`] = `
<button
  aria-checked="false"
  class="s-H7--1TZSAuX0"
  role="switch"
>
  <div
    class="s-H7--1TZSAuX0"
  />
</button>
`;
